# browser-use-article

./: .gitignore  CLAUDE.md  README.md  bu.sh  pyproject.toml
.claude/: browser-use.md
.claude/commands/: run-task.md
bu_task/: __init__.py  browser.py  cli.py  config.py  executor.py  generator.py  llm.py  task.py
bu_task/.claude/: settings.local.json
bu_task/templates/: example.md  xiaohongshu.md
